--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,22 +29,16 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  get: ^4.6.6
   font_awesome_flutter: ^10.7.0
-  google_fonts: ^6.2.1
+  get: ^4.6.6
   go_router: ^14.0.2
-  equatable: ^2.0.5
-
+  google_fonts: ^6.2.1
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
@@ -74,7 +68,5 @@ flutter:
     - family: Lugrasimo
       fonts:
         - asset: assests/fonts/Lugrasimo-Regular.ttf
-
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
