--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   font_awesome_flutter: ^10.7.0
   get: ^4.6.6
+  get_it: ^7.7.0
   go_router: ^14.0.2
   google_fonts: ^6.2.1
 
