--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.7.0
   go_router: ^14.0.2
   google_fonts: ^6.2.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
