--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="bookly"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        
+        android:usesCleartextTraffic="true"
         >
         <activity
             android:name=".MainActivity"
